tdf#93068 - UI: Crash when Character dialogue opened

Change-Id: I92a9e6f27ef649c9d7501df55287c95c4d796156